--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/styles.css" | prepend: site.baseurl }}?{{ site.time | date: '%Y%m%j%H%M%S' }}">
+  <link rel="stylesheet" type="text/css" href="{{ "assets/css/styles.css" }}?{{ site.time | date: '%Y%m%j%H%M%S' }}">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
