fixing assets path

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,5 +5,5 @@
   src="https://code.jquery.com/jquery-3.4.0.slim.js"
   integrity="sha256-milezx5lakrZu0OP9b2QWFy1ft/UEUK6NH1Jqz8hUhQ="
   crossorigin="anonymous"></script>
-<script src="{{ site.baseurl }}/assets/js/uswds.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/editor.js"></script>
+<script src="assets/js/uswds.min.js"></script>
+<script src="assets/js/editor.js"></script>
