--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <header class="margin-bottom-4 padding-top-205 padding-bottom-3 border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
         <a class="" href="{{ site.baseurl }}/" accesskey="1" title="Home" aria-label="{{ site.title }}">
           <img class="margin-right-1 position-relative top-05
-" src="{{ site.baseurl }}/assets/img/brooklynrail-logo.svg" onerror="this.onerror=null; this.src='brooklynrail-logo-red.png'" alt="{{ site.title }}">
+" src="assets/img/brooklynrail-logo.svg" onerror="this.onerror=null; this.src='brooklynrail-logo-red.png'" alt="{{ site.title }}">
         </a>
         <h1 class="margin-y-0 text-bold font-sans-xl display-none">
           {{ site.title }}
