--- a/_includes/media.html
+++ b/_includes/media.html
@@ -1,8 +1,8 @@
 {% if include.caption %}
   <figure class="margin-y-3 margin-x-0 {% if include.class %} {{ include.class }} {% endif %}">
-      <img src="/assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %}/>
+      <img src="assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %}/>
       <figcaption class="font-sans-xs">{{ include.caption }}</figcaption>
   </figure>
 {% else %}
-  <img src="/assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %} {% if include.width %} width="{{ include.width }}" {% endif %}/>
+  <img src="assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %} {% if include.width %} width="{{ include.width }}" {% endif %}/>
 {% endif %}
