adding in events and hours adjustments

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
   <div class="grid-row grid-gap-4">
     <div class="grid-col-12">
-      <header class="margin-bottom-4 padding-top-205 padding-bottom-3 border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
+      <header class="padding-y-105 border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
         <a class="" href="{{ site.baseurl }}/" accesskey="1" title="Home" aria-label="{{ site.title }}">
           <img class="margin-right-1 position-relative top-05
 " src="assets/img/brooklynrail-logo.svg" onerror="this.onerror=null; this.src='brooklynrail-logo-red.png'" alt="{{ site.title }}">
@@ -13,3 +13,16 @@
     </div>
   </div>
 </div>
+
+<section class="margin-bottom-5 position-sticky top-0 z-100 bg-white">
+  <div class="grid-container">
+    <div class="grid-row grid-gap-4">
+      <div class="grid-col-12">
+        <div class="padding-y-105 display-flex flex-justify flex-align-center border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
+          <a class="font-sans-md text-bold text-no-underline" href="https://brooklynrail.org/"><i class="fas fa-arrow-left"></i> <span class="hover:border-bottom-2px">Brooklyn Rail Home</span></a>
+          <a class="padding-x-2 padding-y-105 display-inline-block radius-sm bg-secondary-vivid text-medium text-white hover:text-white text-uppercase text-center text-no-underline font-sans-md" href="#"><span class="hover:border-bottom-2px">Donate</span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
