--- a/assets/sass/_uswds-theme-color.scss
+++ b/assets/sass/_uswds-theme-color.scss
@@ -24,13 +24,13 @@ Theme palette colors
 */
 
 // Base colors
-$theme-color-base-family:           'gray-cool';
-$theme-color-base-lightest:         'gray-5';
-$theme-color-base-lighter:          'gray-cool-10';
-$theme-color-base-light:            'gray-cool-30';
-$theme-color-base:                  'gray-cool-50';
-$theme-color-base-dark:             'gray-cool-60';
-$theme-color-base-darker:           'gray-cool-70';
+$theme-color-base-family:           'gray-warm';
+$theme-color-base-lightest:         'gray-warm-5';
+$theme-color-base-lighter:          'gray-warm-10';
+$theme-color-base-light:            'gray-warm-30';
+$theme-color-base:                  'gray-warm-50';
+$theme-color-base-dark:             'gray-warm-60';
+$theme-color-base-darker:           'gray-warm-70';
 $theme-color-base-darkest:          'gray-90';
 $theme-color-base-ink:              'gray-90';
 
