--- a/assets/sass/_uswds-theme-typography.scss
+++ b/assets/sass/_uswds-theme-typography.scss
@@ -356,7 +356,7 @@ $theme-type-scale-3xs:      2;
 $theme-type-scale-2xs:      3;
 $theme-type-scale-xs:       4;
 $theme-type-scale-sm:       5;
-$theme-type-scale-md:       8;
+$theme-type-scale-md:       7;
 $theme-type-scale-lg:       10;
 $theme-type-scale-xl:       12;
 $theme-type-scale-2xl:      15;
@@ -452,8 +452,8 @@ $theme-style-body-element:         true;
 
 // Headings
 $theme-h1-font-size:               '3xl';
-$theme-h2-font-size:               '2xl';
-$theme-h3-font-size:               'lg';
+$theme-h2-font-size:               'xl';
+$theme-h3-font-size:               'lg';;
 $theme-h4-font-size:               'sm';
 $theme-h5-font-size:               'xs';
 $theme-h6-font-size:               '3xs';
