--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -1,6 +1,7 @@
 
 .media{
   @include u-margin-y(2);
+  @include u-margin-right(0);
   figcaption{
     @include u-text('base');
     @include u-padding-x('05');
@@ -15,7 +16,7 @@
 .width-md{
   @include at-media('tablet-lg') {
     @include u-margin-left(2);
-    @include u-width('mobile-lg');
+    @include u-width('tablet');
     @include u-float('right');
   }
 }
