--- a/assets/sass/_uswds-theme-utilities.scss
+++ b/assets/sass/_uswds-theme-utilities.scss
@@ -17,7 +17,7 @@ https://v2.designsystem.digital.gov/utilities
 ----------------------------------------
 */
 
-$utilities-use-important:     false;
+$utilities-use-important:     true;
 $output-all-utilities:        true;
 
 /*
