--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,8 +3,8 @@
     {% assign sorted_sections = site.sections | sort:"order" %}
     {% for section in sorted_sections %}
     <li class="padding-y-05 font-sans-lg text-bold line-height-sans-4">
-      <a class="padding-y-05 text-no-underline" href="#{{ section.url | slugify }}">
-        <span class="hover:border-bottom-2px">{{ section.title }}</span> <i class="fas fa-arrow-right"></i>
+      <a class="padding-y-05 text-no-underline" href="#{{ section.url | slugify }}" title="view {{ section.nav-title }}">
+        <span class="hover:border-bottom-2px">{{ section.nav-title }}</span> <i class="fas fa-arrow-right"></i>
       </a>
     </li>
     {% endfor %}
