donate button fix

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
       <div class="grid-col-12">
         <div class="padding-y-105 display-flex flex-justify flex-align-center border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
           <a class="font-sans-md text-bold text-no-underline" href="https://brooklynrail.org/"><i class="fas fa-arrow-left"></i> <span class="hover:border-bottom-2px">Brooklyn Rail Home</span></a>
-          <a class="padding-x-2 padding-y-105 display-inline-block radius-sm bg-secondary-vivid text-medium text-white visited:text-white hover:text-white text-uppercase text-center text-no-underline font-sans-md" href="https://brooklynrail.org/donate/"><span class="hover:border-bottom-2px">Donate</span></a>
+          <a class="padding-x-105 padding-y-1 tablet:padding-x-2 tablet:padding-y-105 display-inline-block radius-sm bg-secondary-vivid text-medium text-white visited:text-white hover:text-white text-uppercase text-center text-no-underline font-sans-sm tablet:font-sans-md" href="https://brooklynrail.org/donate/"><span class="hover:border-bottom-2px">Donate</span></a>
         </div>
       </div>
     </div>
