back to top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
     {{ content }}
 
+    <button onclick="topFunction()" id="backtop" title="Go to top"><span>Top <i class="fas fa-long-arrow-alt-up"></i></span></button>
     {% include footer.html %}
   </div>
 
