back to top button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 
 <!-- scripts -->
 <script
-  src="https://code.jquery.com/jquery-3.4.0.slim.js"
-  integrity="sha256-milezx5lakrZu0OP9b2QWFy1ft/UEUK6NH1Jqz8hUhQ="
+  src="https://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
   crossorigin="anonymous"></script>
 <script src="assets/js/uswds.min.js"></script>
 <script src="assets/js/editor.js"></script>
