--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 
     {{ content }}
 
-    <button onclick="topFunction()" id="backtop" title="Go to top"><span>Top <i class="fas fa-long-arrow-alt-up"></i></span></button>
+    <button id="backtop" title="Go to top"><span>Top <i class="fas fa-long-arrow-alt-up"></i></span></button>
+    
     {% include footer.html %}
   </div>
 
