--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,5 +8,8 @@
       </a>
     </li>
     {% endfor %}
+    <li class="padding-y-05 font-sans-md tablet:font-sans-lg text-bold line-height-sans-4">
+      <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><span class="hover:border-bottom-2px">Press release</span> <i class="fas fa-angle-right"></i></a>
+    </li>
   </ul>
 </nav>
