moving the back to top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,15 +4,13 @@
 
 <body class="bg-secondary-vivid">
 
-  <div class="paper bg-white height-auto">
+  <div class="padding-bottom-9 paper bg-white height-auto">
     <a class="usa-skipnav" href="#main-content">Skip to main content</a>
 
     {% include header.html %}
 
     {{ content }}
 
-    <button id="backtop" title="Go to top"><span>Top <i class="fas fa-long-arrow-alt-up"></i></span></button>
-    
     {% include footer.html %}
   </div>
 
