--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,8 @@
   <div class="grid-container">
     <div class="grid-row grid-gap-4">
       <div class="grid-col-12">
-        <div class="padding-y-105 display-flex flex-justify flex-align-center border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
-          <a class="font-sans-md text-bold text-no-underline" href="https://brooklynrail.org/"><i class="fas fa-arrow-left"></i> <span class="hover:border-bottom-2px">Brooklyn Rail Home</span></a>
+        <div class="bar padding-y-105 display-flex flex-justify-end flex-align-center border-top-0 border-x-0 border-bottom border-dotted border-bottom-width-2px border-base-dark">
+          <a id="backtop" class="font-sans-md text-bold text-no-underline display-none" href="https://brooklynrail.org/"><span class="hover:border-bottom-2px">Top <i class="fas fa-long-arrow-alt-up"></i></span></a>
           <a class="padding-x-105 padding-y-1 tablet:padding-x-2 tablet:padding-y-105 display-inline-block radius-sm bg-secondary-vivid text-medium text-white visited:text-white hover:text-white text-uppercase text-center text-no-underline font-sans-sm tablet:font-sans-md" href="https://brooklynrail.org/donate/"><span class="hover:border-bottom-2px">Donate</span></a>
         </div>
       </div>
