add in insta + pdf

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,14 +2,20 @@
   <ul class="add-list-reset">
     {% assign sorted_sections = site.sections | sort:"order" %}
     {% for section in sorted_sections %}
-    <li class="padding-y-05 font-sans-md tablet:font-sans-lg text-bold line-height-sans-4">
+    <li class="padding-y-05 font-sans-md tablet:font-sans-lg line-height-sans-1 text-bold line-height-sans-4">
       <a class="padding-y-05 text-no-underline" href="#{{ section.url | slugify }}" title="view {{ section.nav-title }}">
         <span class="hover:border-bottom-2px">{{ section.nav-title }}</span> <i class="fas fa-angle-right"></i>
       </a>
     </li>
     {% endfor %}
-    <li class="padding-y-05 font-sans-md tablet:font-sans-lg text-bold line-height-sans-4">
-      <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><span class="hover:border-bottom-2px">Press release</span> <i class="fas fa-angle-right"></i></a>
-    </li>
   </ul>
 </nav>
+
+<ul class="add-list-reset">
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+    <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><i class="fab fa-instagram"></i> <span class="hover:border-bottom-2px">Follow @brooklynrail on Instagram</span></a>
+  </li>
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+    <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><i class="far fa-file-pdf"></i> <span class="hover:border-bottom-2px">Press release</span></a>
+  </li>
+</ul>
