--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,8 @@
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+  
   <!-- GitHub -->
   <script type="text/javascript">
     source_of_truth              = "{{ site.source_of_truth }}";
