--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,16 +12,16 @@
 </nav>
 
 <ul class="add-list-reset">
-  <li class="padding-y-05 font-sans-xs tablet:font-sans-sm text-normal line-height-sans-1 line-height-sans-4">
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
     <a class="padding-y-05 text-no-underline" href="https://www.instagram.com/brooklynrail/"><i class="fab fa-instagram"></i> <span class="hover:border-bottom-2px">Instagram</span></a>
   </li>
-  <li class="padding-y-05 font-sans-xs tablet:font-sans-sm text-normal line-height-sans-1 line-height-sans-4">
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
     <a class="padding-y-05 text-no-underline" href="https://twitter.com/thebrooklynrail/"><i class="fab fa-twitter"></i> <span class="hover:border-bottom-2px">Twitter</span></a>
   </li>
-  <li class="padding-y-05 font-sans-xs tablet:font-sans-sm text-normal line-height-sans-1 line-height-sans-4">
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
     <a class="padding-y-05 text-no-underline" href="https://www.facebook.com/thebrooklynrail/"><i class="fab fa-facebook"></i> <span class="hover:border-bottom-2px">Facebook</span></a>
   </li>
-  <li class="padding-y-05 font-sans-xs tablet:font-sans-sm text-normal line-height-sans-1 line-height-sans-4">
+  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
     <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><i class="far fa-file-pdf"></i> <span class="hover:border-bottom-2px">Press release</span></a>
   </li>
 </ul>
