--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -7,19 +7,19 @@
 // }
 
 #backtop {
-  @include u-border('2px', 'red-50v', 'solid');
+  @include u-border('1px', 'red-50v', 'solid');
   outline: none; /* Remove outline */
   @include u-bg('white');
   @include u-color('red-50v');
   cursor: pointer; /* Add a mouse pointer on hover */
-  @include u-padding-y(1);
-  @include u-padding-x('105');
+  @include u-padding-y('05');
+  @include u-padding-x(1);
   @include u-radius('sm');
-  @include u-text('normal');
+  @include u-text('light');
   @include u-font('sans', 'sm');
   &:hover{
     span{
-      @include u-border-bottom('2px', 'red-50v', 'solid');
+      @include u-border-bottom('1px', 'red-50v', 'solid');
     }
   }
 }
