adding edit button to pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,3 +7,4 @@
   crossorigin="anonymous"></script>
 <script src="assets/js/uswds.min.js"></script>
 <script src="assets/js/editor.js"></script>
+<script src="assets/js/scroll.js"></script>
