--- a/_includes/section.html
+++ b/_includes/section.html
@@ -1,7 +1,8 @@
 {% assign sorted_sections = site.sections | sort:"order" %}
 {% for section in sorted_sections %}
   <h2 id="{{ section.id | slugify }}">{{ section.title | escape }}</h2>
-  <div>
+  <div data-edit-this="{{ section.path }}">
     {{ section.content }}
   </div>
+
 {% endfor %}
