--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,20 +26,16 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-  
+
   <!-- GitHub -->
   <script type="text/javascript">
     source_of_truth              = "{{ site.source_of_truth }}";
     github_org                   = "{{ site.github_org }}";
     github_repo                  = "{{ site.github_repo }}";
     filepath                     = "{{ page.path }}";
-    filepathURL                  = "https://github.com/{{ site.git_org }}/{{ site.git_repo }}/edit/master/{{ page.path }}";
+    filepathURL                  = "https://github.com/{{ site.github_org }}/{{ site.github_repo }}/edit/master/{{ page.path }}";
     commit_api                   = "https://api.github.com/repos/{{ site.github_org }}/{{ site.github_repo }}/commits?path=/{{ page.path }}";
     issues_api                   = "https://api.github.com/repos/{{ site.github_org }}/{{ site.github_repo }}/issues?labels=bug&per_page=100";
-    workflow_org                 = "{{ site.workflow_org }}";
-    workflow_repo                = "{{ site.workflow_repo }}";
-    workflow_issues_api          = "https://api.github.com/repos/{{ site.workflow_org }}/{{ site.workflow_repo }}/issues";
-    content_types                = {{ site.content_types | jsonify }};
   </script>
 
 </head>
