--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,6 @@
     issues_api                   = "https://api.github.com/repos/{{ site.github_org }}/{{ site.github_repo }}/issues?labels=bug&per_page=100";
   </script>
 
+  {% include analytics.html %}
+  
 </head>
