adding html around each section

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,13 +28,13 @@ layout: default
         <div data-edit-this="{{ page.path }}">
           {{ content }}
         </div>
-
-        {% include navigation.html %}
-
-        {% include section.html %}
-
-
       </div>
     </div>
   </div>
+</section>
+
+    {% include navigation.html %}
+
+    {% include section.html %}
+
 </section>
