--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,27 +1,41 @@
-<nav role="navigation" class="margin-bottom-1 padding-y-105">
-  <ul class="add-list-reset">
-    {% assign sorted_sections = site.sections | sort:"order" %}
-    {% for section in sorted_sections %}
-    <li class="padding-y-05 font-sans-md tablet:font-sans-lg line-height-sans-1 text-bold line-height-sans-4">
-      <a class="padding-y-05 text-no-underline" href="#{{ section.url | slugify }}" title="view {{ section.nav-title }}">
-        <span class="hover:border-bottom-2px">{{ section.nav-title }}</span> <i class="fas fa-angle-right"></i>
-      </a>
-    </li>
-    {% endfor %}
-  </ul>
-</nav>
+<section>
+  <div class="grid-container">
+    <div class="grid-row grid-gap-4">
+      <div class="grid-col-12">
 
-<ul class="add-list-reset">
-  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
-    <a class="padding-y-05 text-no-underline" href="https://www.instagram.com/brooklynrail/"><i class="fab fa-instagram"></i> <span class="hover:border-bottom-2px">Instagram</span></a>
-  </li>
-  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
-    <a class="padding-y-05 text-no-underline" href="https://twitter.com/thebrooklynrail/"><i class="fab fa-twitter"></i> <span class="hover:border-bottom-2px">Twitter</span></a>
-  </li>
-  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
-    <a class="padding-y-05 text-no-underline" href="https://www.facebook.com/thebrooklynrail/"><i class="fab fa-facebook"></i> <span class="hover:border-bottom-2px">Facebook</span></a>
-  </li>
-  <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
-    <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><i class="far fa-file-pdf"></i> <span class="hover:border-bottom-2px">Press release</span></a>
-  </li>
-</ul>
+        <nav role="navigation" class="margin-bottom-1 padding-y-105">
+
+          <ul class="add-list-reset">
+            {% assign sorted_sections = site.sections | sort:"order" %}
+            {% for section in sorted_sections %}
+            <li class="padding-y-05 font-sans-md tablet:font-sans-lg line-height-sans-1 text-bold line-height-sans-4">
+              <a class="padding-y-05 text-no-underline" href="#{{ section.url | slugify }}" title="view {{ section.nav-title }}">
+                <span class="hover:border-bottom-2px">{{ section.nav-title }}</span> <i class="fas fa-angle-right"></i>
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+
+          <ul class="margin-y-2 add-list-reset">
+            <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+              <a class="padding-y-05 text-no-underline" href="https://www.instagram.com/brooklynrail/"><i class="fab fa-instagram"></i> <span class="hover:border-bottom-2px">Instagram</span></a>
+            </li>
+            <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+              <a class="padding-y-05 text-no-underline" href="https://twitter.com/thebrooklynrail/"><i class="fab fa-twitter"></i> <span class="hover:border-bottom-2px">Twitter</span></a>
+            </li>
+            <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+              <a class="padding-y-05 text-no-underline" href="https://www.facebook.com/thebrooklynrail/"><i class="fab fa-facebook"></i> <span class="hover:border-bottom-2px">Facebook</span></a>
+            </li>
+            <li class="padding-y-05 font-sans-sm tablet:font-sans-md text-normal line-height-sans-1 line-height-sans-4">
+              <a class="padding-y-05 text-no-underline" href="https://brooklynrail.org/pdf/brooklyn-rail-venice-press-release.pdf"><i class="far fa-file-pdf"></i> <span class="hover:border-bottom-2px">Press release</span></a>
+            </li>
+          </ul>
+
+        </nav>
+
+
+
+      </div>
+    </div>
+  </div>
+</section>
