--- a/_includes/section.html
+++ b/_includes/section.html
@@ -1,8 +1,16 @@
 {% assign sorted_sections = site.sections | sort:"order" %}
 {% for section in sorted_sections %}
-  <h2 id="{{ section.id | slugify }}">{{ section.title | escape }}</h2>
-  <div data-edit-this="{{ section.path }}">
-    {{ section.content }}
+<section class="margin-y-5">
+  <div class="grid-container">
+    <div class="grid-row grid-gap-4" data-edit-this="{{ section.path }}">
+      <div class="grid-col-12">
+        <h2 id="{{ section.id | slugify }}">{{ section.title | escape }}</h2>
+        <div>
+          {{ section.content }}
+        </div>
+      </div>
+    </div>
   </div>
+</section>
 
 {% endfor %}
