--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -83,6 +83,25 @@
     @include u-font('sans', 'xs');
   }
 }
+
+.video{
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video iframe,
+.video object,
+.video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 code{
   @include u-padding-x('05');
   @include u-padding-y('2px');
