update video strip

--- a/_includes/video-strip.html
+++ b/_includes/video-strip.html
@@ -14,6 +14,18 @@
 
       </div>
 
+      <div class="grid-col-6 tablet:grid-col-3">
+
+        {% include video.html youtube_id="y-NJAL1fS3U" %}
+
+      </div>
+
+      <div class="grid-col-6 tablet:grid-col-3">
+
+        {% include video.html youtube_id="y-NJAL1fS3U" %}
+
+      </div>
+
 
     </div>
   </div>
