--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="{{ "assets/css/styles.css" }}?{{ site.time | date: '%Y%m%j%H%M%S' }}">
 
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  // Add the new slick-theme.css if you want the default styling
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
@@ -39,5 +43,5 @@
   </script>
 
   {% include analytics.html %}
-  
+
 </head>
