slick assets to head and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,5 @@
 <script src="assets/js/uswds.min.js"></script>
 <script src="assets/js/editor.js"></script>
 <script src="assets/js/scroll.js"></script>
+<script type="text/javascript" src="{{ "assets/js/slick.min.js" }}"></script>
+<script src="assets/js/custom.js"></script>
