--- a/assets/sass/_slides.scss
+++ b/assets/sass/_slides.scss
@@ -3,18 +3,24 @@
     @include u-margin-x('05');
     @include at-media('tablet') {
       @include u-margin-x(2);
+      @include u-maxw('tablet-lg');
     }
     img{
       @include u-margin-bottom('05');
-      @include u-bg('gray-cool-5');
       @include u-padding(0);
       @include u-margin-x(0);
+      opacity: 0.4;
       @include at-media('tablet') {
-        @include u-margin-x(2);
-        @include u-padding('205');
       }
     }
   }
+
+  .slick-current{
+    img{
+      opacity: 1;
+    }
+  }
+
   .slick-arrow:before{
     @include u-text('black');
     font-size: 26px;
