--- a/_includes/slide.html
+++ b/_includes/slide.html
@@ -1,8 +1,9 @@
 {% if include.caption %}
   <figure class="media">
-      <img src="/assets/media/photos/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %}/>
+      <img src="assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %}/>
+      {% if include.credit != "" %}<span class="credit font-sans-3xs">{{ include.credit }}</span>{% endif %}
       <figcaption class="font-sans-3xs tablet:font-sans-2xs">{{ include.caption }}</figcaption>
   </figure>
 {% else %}
-  <img src="/assets/media/photos/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %}/>
+  <img src="assets/media/{{ include.filename }}" {% if include.alt %} alt="{{ include.alt }}" {% endif %} {% if include.width %} width="{{ include.width }}" {% endif %}/>
 {% endif %}
